# mueval-cloud

./: README.md  mueval-cloud.cabal
src/: Code.hs  Config.hs  Eval.hs  Master.hs  Types.hs  Util.hs  Worker.hs
