name:                mueval-cloud
version:             0.0.0.1
synopsis:            A distrubuted mueval based evaluator for 4haskell.org
license:             GPL-3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
copyright:           (c) Konstantin Zudov, 2015
category:            Evaluation

build-type:          Simple
cabal-version:       >=1.10

Flag master
  Description: Enable master executable
  Default: True
Flag worker
  Description: Enable worker executable
  Default: True

executable mueval-cloud-master
  if flag(master)
    buildable: True
    build-depends:       base >=4.7 && <4.8
                       , text
                       , amqp
                       , aeson
                       , bytestring
                       , random
                       , transformers
                       , hslogger
                       , wai-extra
                       , warp
                       , uuid
                       , ctrie
                       , wai
                       , http-types
                       , scotty >= 0.9.0
                       , resource-pool
                       , hflags
  else
    buildable: False
  main-is:             Master.hs
  other-modules:       Types
                     , Master
                     , Config
                     , Util
  hs-source-dirs:      src/
  
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  
executable mueval-cloud-worker
  if flag(worker)
    buildable: True
    build-depends:       base >=4.7 && <4.8
                       , text
                       , amqp
                       , aeson
                       , bytestring
                       , transformers
                       , hslogger
                       , resource-pool
                       , hflags
                       , regex-posix
                       , filepath
                       , Unixutils
                       , directory
                       , process-extras
                       , safe
  else
    buildable: False
  main-is:             Worker.hs
  other-modules:       Types
                     , Worker
                     , Config
                     , Util
                     , Eval
  hs-source-dirs:      src/
  
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
